syntax = "proto3";

message FrsTabInfo {
    int32 tab_id = 1;
    string tab_name = 3;
    int32 is_general_tab = 7;
}
